Enable annotation processing in Javac compiler (#519)